--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "chart.js": "^4.4.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.0"
   },
   "browserslist": {
